change in pages.

--- a/site/index1.html
+++ b/site/index1.html
@@ -4,6 +4,6 @@
   	<title>hello Parvinder</title>
   </head>
   <body>
-  <h1>hello Parvinder<h1>
+  <h1>hello Parvinder it is my name<h1>
   </body>
   </html>
